# chromadb_poc

./: .env.example  .gitignore  CLAUDE.md  config.toml  gradio_app.py  pyproject.toml  requirements.txt  test_performance.py
.beads/: issues.jsonl
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: download_500_papers_summary.md
docs/plans/: 2026-01-13-arxiv-rag-chromadb-design.md  2026-01-13-phase-1-foundation.md  2026-01-13-phase-2-ingestion.md  2026-01-13-phase-3-retrieval-generation.md  2026-01-13-phase-4-ui-polish.md  2026-01-19-contracts-rag-design.md  2026-01-19-phase1-contract-filename-parser.md  2026-01-19-phase2-chromastore-multicollection.md  2026-01-19-phase4-multicollection-ui-design.md  2026-01-19-phase4-multicollection-ui.md  phase-1-gate-summary.md  (+2 more)
scripts/: check_download_progress.sh  download_500_papers.py  enrich_metadata.py  ingest_contracts.py  ingest_parallel.py  ingest_test_papers.py  parse_papers.py  query_demo.py  setup_chroma.py  test_metadata_filter.py  test_parser_real.py  test_phase4_gate.py  wait_for_download.sh
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_cached_engine.py  test_chroma_store.py  test_chunker.py  test_citation_formatter.py  test_config.py  test_contract_filename_parser.py  test_downloader.py  test_engine.py  test_gradio_app.py  test_hybrid_search.py  test_indexer.py  test_llm.py  test_metadata.py  test_parallel_ingestion.py  test_parser.py  test_placeholder.py  test_rag_engine_multicollection.py  test_reranker.py
(+18 files in other folders)
